--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownDownload">
                           <li><a class="dropdown-item" href="#cta"> <i class="fa-solid fa-file-arrow-down"></i> Full Package</a>  </li>
-                          <li><a class="dropdown-item" href="#cta"> <i class="fa-solid fa-file-arrow-down"></i> One Pager </a>  </li>
+                          <li><a class="dropdown-item" href="#cta"> <i class="fa-solid fa-file-arrow-down"></i> Overview </a>  </li>
 
                       </ul>
                   </li>
@@ -192,7 +192,7 @@
           <button type="button"  class="btn btn-dark btn-lg dwnload"> <i class="fa-solid fa-file-arrow-down"></i> Full Package</button>
         </div>
         <div class="col-lg-6" id="btn">
-          <button type="button"  class="btn btn-dark btn-lg dwnload">  <i class="fa-solid fa-file-arrow-down"></i> One Pager </button>
+          <button type="button"  class="btn btn-dark btn-lg dwnload">  <i class="fa-solid fa-file-arrow-down"></i> Overview </button>
         </div>
       </div>
         
